[gd_scene load_steps=10 format=3 uid="uid://coe4j3sd6ar6y"]

[ext_resource type="Texture2D" uid="uid://bbo08cxssbtpi" path="res://Assets/BG_DesertMountains/back1.png" id="1_aarkg"]
[ext_resource type="Script" uid="uid://djtysq5id4mo0" path="res://UI/level_selector.gd" id="1_du7fn"]
[ext_resource type="FontFile" uid="uid://cbgx1k4s8bx56" path="res://Fonts/Righteous-Regular.ttf" id="2_n1v2o"]
[ext_resource type="Texture2D" uid="uid://draaekahx48sb" path="res://Assets/kenney_ui-pack-rpg-expansion/PNG/buttonSquare_grey.png" id="3_wmxa0"]
[ext_resource type="Texture2D" uid="uid://dlx467phrgdt6" path="res://Assets/BG_DesertMountains/donkey.png" id="4_ch7ns"]
[ext_resource type="FontFile" uid="uid://ckjnwdyjcuv2b" path="res://Fonts/PressStart2P-Regular.ttf" id="5_ch7ns"]
[ext_resource type="Texture2D" uid="uid://bm2bt6wxg640n" path="res://Assets/BG_DesertMountains/space.png" id="5_tbypk"]
[ext_resource type="Texture2D" uid="uid://2cc5bw57blfi" path="res://Assets/kenney_ui-pack-rpg-expansion/PNG/buttonLong_beige.png" id="7_tbypk"]
[ext_resource type="AudioStream" uid="uid://8yef5acybqd6" path="res://Music/Terraria Music - Day.mp3" id="9_r6216"]

[node name="Level-Selector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_du7fn")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_aarkg")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 64.0
offset_bottom = 151.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0.599404, 0.945313, 1)
theme_override_colors/font_shadow_color = Color(9.62615e-08, 0.356969, 0.57473, 1)
theme_override_fonts/font = ExtResource("2_n1v2o")
theme_override_font_sizes/font_size = 70
text = "-LEVELS-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -495.0
offset_top = -213.0
offset_right = 495.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_wmxa0")
expand_mode = 2

[node name="TextureRect" type="TextureRect" parent="TextureRect/HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -180.0
offset_right = 1005.0
offset_bottom = 913.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_ch7ns")
expand_mode = 1

[node name="Climb Up" type="Button" parent="TextureRect/HBoxContainer/TextureRect"]
layout_mode = 0
offset_left = 38.0
offset_top = 33.0
offset_right = 392.0
offset_bottom = 361.0
theme_override_fonts/font = ExtResource("5_ch7ns")
theme_override_font_sizes/font_size = 20
text = "CLIMB UP!"

[node name="TextureRect2" type="TextureRect" parent="TextureRect/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_wmxa0")
expand_mode = 2

[node name="TextureRect" type="TextureRect" parent="TextureRect/HBoxContainer/TextureRect2"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -180.0
offset_right = 996.0
offset_bottom = 914.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_tbypk")
expand_mode = 1

[node name="Space Shooters" type="Button" parent="TextureRect/HBoxContainer/TextureRect2"]
layout_mode = 0
offset_left = 36.0
offset_top = 33.0
offset_right = 388.0
offset_bottom = 361.0
theme_override_fonts/font = ExtResource("5_ch7ns")
theme_override_font_sizes/font_size = 20
text = "SPACE SHOOTER"

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
texture_filter = 1
layout_mode = 0
offset_left = 784.0
offset_top = 920.0
offset_right = 1136.0
offset_bottom = 984.0
texture = ExtResource("7_tbypk")

[node name="Menu" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -158.0
offset_top = -160.0
offset_right = 159.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_n1v2o")
theme_override_font_sizes/font_size = 40
text = "VOLVER AL MENU"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_r6216")
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="TextureRect/HBoxContainer/TextureRect/Climb Up" to="." method="_on_climb_up_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/TextureRect2/Space Shooters" to="." method="_on_space_shooters_pressed"]
[connection signal="pressed" from="TextureRect/Menu" to="." method="_on_menu_pressed"]
